# upsonic_agent

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  result.md
src/app/: agent.py  constants.py  result.md  tools.py
